--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "eslint ./src/**/*.es6",
     "dev": "chokidar './src/**/*.*' -c 'npm run build'",
-    "build": "browserify ./src/index.es6 -o ./dist/floating-widget.user.js -t [ vueify babelify --presets [ es2015 ] ] && cat ./src/prepend > ./dist/dist.js && cat ./dist/floating-widget.user.js >> ./dist/dist.js"
+    "build": "browserify ./src/index.es6 -o ./dist/floating-widget.js -t [ vueify babelify --presets [ es2015 ] ]"
   },
   "keywords": [],
   "license": "MIT",
