--- a/.eslintrc
+++ b/.eslintrc
@@ -144,6 +144,7 @@
         "browser": true,
         "es6": true,
         "node": true,
+        "chrome": true,
         "worker": true
     },
     "parserOptions": {
