--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": false,
   "main": "index.js",
   "scripts": {
-
     "test": "eslint ./src/**/*.es6",
     "dev": "chokidar './src/**/*.*' './extention/scripts/src/*.es6' -c 'npm run build'",
     "build": "browserify ./src/index.es6 -o ./extention/scripts/floating-widget.js -t [ vueify babelify --presets [ es2015 ] ] && browserify ./extention/scripts/src/background.es6 -o ./extention/scripts/background.js -t [ babelify --presets [ es2015 ] ]"
@@ -15,6 +14,7 @@
   "dependencies": {
     "browserify": "14.4.0",
     "css-modulesify": "0.28.0",
+    "fingerprintjs2": "1.6.1",
     "vue": "2.5.9"
   },
   "devDependencies": {
